# BankAssist

./: .env.example  .gitignore  ASRtest.py  DEPLOYMENT.md  README.md  app.py  app_rag_test.py  implementation_plan.md  indic_tts_final.py  main.py  pyproject.toml  requirements.txt  requirements_rag.txt  task.md
.streamlit/: config.toml
app/: __init__.py
app/api/: __init__.py  middleware.py
app/chunking/: __init__.py  base.py  metadata_enricher.py  orchestrator.py  parent_child_chunker.py  structure_chunker.py  table_chunker.py  token_counter.py
app/config/: settings.py
app/conversation/: __init__.py  graph.py  session_manager.py  session_summarizer.py  state.py
app/embeddings/: __init__.py  bge_embedder.py
app/evaluation/: __init__.py  confidence_scorer.py  ragas_evaluator.py  test_dataset.py
app/ingestion/: __init__.py  drive_ingestor.py  models.py  pipeline.py  registry.py  url_ingestor.py
app/llm/: __init__.py  generator.py  hallucination_guard.py  qwen3_loader.py
app/memory/: __init__.py  entity_tracker.py  long_term.py  manager.py  short_term.py  topic_tracker.py
app/monitoring/: __init__.py  metrics.py  tracer.py
app/parser/: __init__.py  models.py  pdf_parser.py  table_extractor.py
app/prompts/: __init__.py  (+2 more)
config/: config.yaml  google_service_account.json.example
docs/: api_reference.md  architecture.md  deployment_guide.md
notebooks/: check_GPU.py  finetune_qwen3_5_4B_rbi_qa_colab.ipynb  finetune_qwen3_5_4B_rbi_qa_local.ipynb  finetune_qwen3_rbi_qa_6gb_laptop.ipynb  qwen3_6gb_vram_finetune.ipynb
tests/: conftest.py  run_tests.py
(+38 files in other folders)
