[project]
name = "bankassist"
version = "0.1.0"
description = "BankAssist multilingual voice assistant prototype"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.25.0",
    "streamlit-webrtc>=0.58.0",
    "av>=10.0.0",
    "numpy>=1.26.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "soundfile>=0.12.1",
    "huggingface-hub>=0.16.4",
    "sentencepiece>=0.1.99",
    "pydub>=0.25.1",
    "ffmpeg-python>=0.2.0",
    "python-dotenv>=0.21.0",
    "speechrecognition>=3.10.0",
    "indictranstoolkit>=1.1.1",
    "deep-translator>=1.11.4",
    "nltk>=3.8.1",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }